removing image from folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="head1 ">
-            <img src="images/rccg logo.JPG" width="30" class="logo">
+            <img src="rccg logo.JPG" width="30" class="logo">
             <div class="ds">Destiny Sanctuary</div>
         </div>
         <div class="menu">
