--- a/Services.html
+++ b/Services.html
@@ -2,47 +2,32 @@
 <html>
     <head>
         <title>
-            RCCG|DS|Services
+            RCCG|Destiny Santuary
         </title>
         <link rel="stylesheet" href="Des.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Monotype Corsiva' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Cambria' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=OptimusPrinceps' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=Cormorant Upright' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=Lucida Handwriting' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Californian FB' rel='stylesheet'>
+        <script src="Des.js"></script>
     </head>
     <body>
-        <div class="clearfix">
-            <header class="head1">
-                <img src="images/rccg logo.JPG" width="30" class="logo">
-                <div class="ds">Destiny Sanctuary</div>
-            </header>
-            <div class="menu">
-                <input type="checkbox" id="check">
-                <label for="check">
-                    <i class="fas fa-bars" id="btn"></i>
-                     <i class="fas fa-times" id="cancel"></i>
-                </label>
-               <div class="sidebar side">
+        <div class="head1 ">
+            <img src="rccg logo.JPG" width="30" class="logo">
+            <div class="ds">Destiny Sanctuary</div>
+        </div>
+        <div class="menu">
+            <input type="checkbox" id="check">
+            <label for="check">
+                <i class="fas fa-bars" id="btn"></i>
+                <i class="fas fa-times" id="cancel"></i>
+            </label>
+            <div class="sidebar side">
                 <li class="A into"><a class="home" href="index.html"><i class="fas fa-home"></i>Halleluyah</a></li>
-
-                 <ul class="u">
-                    <li class="l"><a href="Dashboard.html"><i class="fas fa-qrcode"></i>Dashboard</a></li>
-                    <li class="l"><a href="Shortcut.html"><i class="fas fa-link"></i>Shortcut</a></li>
-                    <li class="l"><a href="Overview.html"><i class="fas fa-stream"></i>Overview</a></li>
-                    <li class="l"><a href="Events.html"><i class="fas fa-calendar-week"></i>Events</a></li>
-                    <li class="l"><a href="About.html"><i class="far fa-question-circle"></i>About</a></li>
-                    <li class="l"><a href="Services.html"><i class="fas fa-sliders-h"></i>Services</a></li>
-                    <li class="l"><a href="Envelope.html"><i class="far fa-envelope-open"></i>Envelope</a></li>
-                </ul>
-            </div><br><div class="sidebar side">
-                <li class="A into"><a class="home" href="index.html"><i class="fas fa-home"></i>Halleluyah</a></li>
-
-                 <ul class="u">
+                <ul class="u">
                     <li class="l"><a href="Dashboard.html"><i class="fas fa-qrcode"></i>Dashboard</a></li>
                     <li class="l"><a href="Engagement.html"><i class="fas fa-link"></i>Engagement</a></li>
                     <li class="l"><a href="Overview.html"><i class="fas fa-stream"></i>Overview</a></li>
@@ -52,7 +37,6 @@
                     <li class="l"><a href="Envelope.html"><i class="far fa-envelope-open"></i>Envelope</a></li>
                 </ul>
             </div><br>
-            </div>
         </div>
         <!--swiper section-->
         <div class="row row_body">
