--- a/Services.html
+++ b/Services.html
@@ -12,11 +12,12 @@
         <link href='https://fonts.googleapis.com/css?family=Cambria' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=OptimusPrinceps' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Californian FB' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Lucida Handwriting' rel='stylesheet'>
         <script src="Des.js"></script>
     </head>
     <body>
         <div class="head1 ">
-            <img src="rccg logo.JPG" width="30" class="logo">
+            <img src="rccg logo.jpg" width="30" class="logo">
             <div class="ds">Destiny Sanctuary</div>
         </div>
         <div class="menu">
