--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <link href='https://fonts.googleapis.com/css?family=Cambria' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=OptimusPrinceps' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Californian FB' rel='stylesheet'>
-        <script src="Des.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Lucida Handwriting' rel='stylesheet'>
+        <script src="Des.js" async></script>
     </head>
     <body>
         <div class="head1 ">
-            <img src="rccg logo.JPG" width="30" class="logo">
+            <img src="rccg logo.jpg" width="30" class="logo">
             <div class="ds">Destiny Sanctuary</div>
         </div>
         <div class="menu">
@@ -82,7 +83,8 @@
                 <div class="card card-background">
                     <p class="title tog5">Youth Affair</p>
                     <div class="area btn">
-                        <div class="youth" onclick="document.getElementById('ModalForm').style.display ='block'" style="width: auto;">
+                        <div class="youth" id="btnto" style="width: auto;">
+                            <span id="close" class="closemodal">&times;</span>
                             <a><i class='far fa-user'></i>Know your Status</a>
                         </div>
                         <div class="youth" id="ModalForm">
