--- a/Services.html
+++ b/Services.html
@@ -13,7 +13,7 @@
         <link href='https://fonts.googleapis.com/css?family=OptimusPrinceps' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Californian FB' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Lucida Handwriting' rel='stylesheet'>
-        <script src="Des.js"></script>
+        <script src="Des.js" async></script>
     </head>
     <body>
         <div class="head1 ">
