New update for all files
Update of background image and youth files

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <a><i class='far fa-user'></i>Know your Status</a>
                         </div>
                         <div class="youth" id="ModalForm">
-                            <span id="close" class="closemodal">&times;</span>
+                            <!--<span id="close" class="closemodal">&times;</span>-->
                             <div class="youthModal youth-container" style="border: 2px solid #ccc">
                                 <h1 class="YouthGateTop">Exclusively Youthh Arena</h1><br><br>
                                <div class="YouthGate"><a href="signupyouth.html" target="_self">SIGN UP TO YOUTH AFFAIRS</a></div>
