--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="youth" id="ModalForm">
                             <!--<span id="close" class="closemodal">&times;</span>-->
                             <div class="youthModal youth-container" style="border: 2px solid #ccc">
-                                <h1 class="YouthGateTop">Exclusively Youthh Arena</h1><br><br>
+                                <h1 class="YouthGateTop">Exclusively Youth Arena</h1><br><br>
                                <div class="YouthGate"><a href="signupyouth.html" target="_self">SIGN UP TO YOUTH AFFAIRS</a></div>
                             </div>
                         </div>
