--- a/Dashboard.html
+++ b/Dashboard.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="head1 ">
-            <img src="rccg logo.jpg" width="30" class="logo">
+            <img src="rccg logo.jpg" width="30" class="logo"><br><br>
             <div class="ds">Destiny Sanctuary</div>
         </div>
         <div class="menu">
