--- a/Youthlogin.html
+++ b/Youthlogin.html
@@ -2,27 +2,37 @@
 <html>
 	<head>
 		<title>Youth Login</title>
-		<link rel="stylesheet" type="text/css" href="Des.css">
+		<link rel="stylesheet" href="Des.css">
 		<script src="Des.js"></script>
+        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Monotype Corsiva' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Cambria' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=OptimusPrinceps' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Californian FB' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Lucida Handwriting' rel='stylesheet'>
 	</head>
-	<body>
-		<form class="FormOnecontent" action="action_page.php" style="border: 2px solid #ccc">
-			<h2 align="center" class="letter">You are Welcome!</h2>
-			<h4 align="center" class="letter2">Please Login</h4>
-			<label for="Usernam"><b>Username</b></label><br>
-			<input type="text" placeholder="Enter Email/Username" name="Username" required><br><br>
-			<label for="psw"><b>Password</b></label><br>
-			<input type="Password" placeholder="Enter Password" id="Pword" name="psw" required><br><br>
-			<input type="checkbox" onclick="viewLogin()">Show Password
-			<label style="float: right;">
-			<input type="checkbox" checked="checked" name="remember"> Remember me.
-			</label><br>
-			<div class="tandc">
-				<button type="submit" class="btnyLogin">Login</button>
-				<button type="button" class="cancelbtnyLongin">Cancel</button>
-			</div><br><br><br>
-			<p class="TC" align="center"><strong>New Member? </strong><a href="Signupyouth.html"><b>|</b>Signup Here<b>|</b></a></p>
-		</form>
-		<div class="church"><a href="index.html">Return To Church</a></div>
+	<body class="formbodylogin">
+		<a class="YouthHome" href="index.html"><i class="sign fas fa-home"><span class="return"> Return to Church</span></i></a>
+		<div id="formfill" class="formfill">
+			<form class="FormOnecontent" action="action_page.php" style="border: 2px solid #ccc">
+				<h2  class="letter">You are Welcome!</h2>
+				<h4  class="letter2">Please Login</h4>
+				<label for="Usernam"><b>Username</b></label><br>
+				<input type="text" placeholder="Enter Email/Username" name="Username" required><br><br>
+				<label for="psw"><b>Password</b></label><br>
+				<input type="Password" placeholder="Enter Password" id="Pword" name="psw" required><br><br>
+				<input type="checkbox" onclick="viewLogin()">Show Password
+				<label style="float: right;">
+				<input type="checkbox" checked="checked" name="remember"> Remember me.
+				</label><br>
+				<div class="tandc">
+					<button type="submit" class="btnyLogin">Login</button>
+					<button type="button" class="cancelbtnyLongin">Cancel</button>
+				</div><br><br><br>
+				<p class="TC"><strong>New Member? </strong><a href="Signupyouth.html"><b>|</b>Signup Here<b>|</b></a></p>
+			</form>
+		</div>
 	</body>
 </html>
