link between index and youth file
link between index and youth file

--- a/Youthlogin.html
+++ b/Youthlogin.html
@@ -38,7 +38,7 @@
 					<button type="submit" class="btnyLogin">Login</button>
 					<button type="button" class="cancelbtnyLongin">Cancel</button>
 				</div><br><br><br>
-				<p class="TC"><strong style="color: white;">New Member? </strong><a href="Signupyouth.html" target="_blank" style="color: white;"><b>|</b>Signup Here<b>|</b></a></p><br>
+				<p class="TC"><strong style="color: white;">New Member? </strong><a href="signupyouth.html" target="_blank" style="color: white;"><b>|</b>Signup Here<b>|</b></a></p><br>
 			</form>
 		</div>
 	</body>
