--- a/Youthlogin.html
+++ b/Youthlogin.html
@@ -14,11 +14,10 @@
 	</head>
 	<body class="formbodylogin">
 		<a class="YouthHome" href="index.html">
-			<i class="sign fas fa-home">
-				<span class="return"> 
-					Return to Church
-				</span>
-			</i>
+			<i class="sign fas fa-home"></i>
+			<span class="return"> 
+				Return to Church
+			</span>
 		</a>
 		<div id="formfill" class="formfill">
 			<form class="FormOnecontent" action="action_page.php" style="border: 2px solid #ccc">
