cleaning code repetition
cleaning code repetition

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="card card-background">
                     <p class="title tog1">Up Coming Programmes...</p>
                     <div class="batch btn">
-                        <li class="car1"><a href="#">Prayer Weekend For Last</a></li>
-                        <li class="car2"><a href="#">Family Weekend</a></li>
-                        <li class="car3"><a href="#">Fourth Anniversary</a></li>
+                        <li class="car"><a href="#">Prayer Weekend For Last</a></li>
+                        <li class="car"><a href="#">Family Weekend</a></li>
+                        <li class="car"><a href="#">Fourth Anniversary</a></li>
                         <span class="close close-batch" title="Close Card">&times;</span>
                     </div>
                 </div>
